# f_table

./: 404.html  README.md  STYLE_GUIDE.md  f_table_tests.py  index.html  interactive_tests.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: docs.yml
adapters/: index.html
docs/: README.md  adapters.md  formatting.addon.tmp  formatting.md  getting-started.md  index.md  recipes.md  styles.md  usage.md
docs/_assets/: extra.css
docs/references/: classes.md  doc_styles.md  exceptions.md  functions.md  index.md  styles.md  text_styles.md
formatting/: index.html
getting-started/: index.html
profiling/: profile_craftable.py  profile_f_table.py
recipes/: index.html
references/: index.html
references/classes/: index.html
references/doc_styles/: index.html
references/exceptions/: index.html
references/functions/: index.html
references/styles/: index.html
references/text_styles/: index.html
search/: search_index.json
src/: f_table.py
src/f_table/: __init__.py  f_table.py
styles/: index.html
tests/: __init__.py  f_table_tests.py  test_adapters.py  test_adapters_from_dataframe.py  test_adapters_from_pandas.py  test_coldef.py  test_coldef_list.py  test_craftable_coverage.py  test_export_cell_alignment.py  test_export_header_alignment.py  test_export_native_types.py  test_export_optional_formats.py  test_export_rtf.py  test_f_table.py  test_f_table.py.backup  test_get_table_basic.py  test_get_table_edge_cases.py  test_get_table_header.py  test_get_table_iterables.py  test_get_table_row.py  test_none_text.py  test_pre_postprocessors.py  test_prefix_suffix.py
usage/: index.html
