[project]
name = "f-table"
version = "0.2.0"
description = "f-table - Simple, elegant terminal tables using format strings"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[dependency-groups]
docs = [
    "mkdocs-material>=9.6.7,<10",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
]

[tool.uv]
default-groups = ["docs"]


[tool.hatch.build.targets.sdist]
include = [
    "src/f_table",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/f_table",
]

[tool.hatch.build.targets.wheel.sources]
"src/f_table" = "f_table"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

