[project]
name = "f-table"
version = "0.1.0"
description = "f-table - Simple, elegant terminal tables using format strings"
authors = [{ name = "Paul York", email = "paul@yorkfamily.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "table",
    "terminal",
    "formatting",
    "f-string",
]
dependencies = []

[project.urls]
homepage = "https://ptyork.github.io/f_table"
repository = "https://github.com/ptyork/f_table"
"Bug Tracker" = "https://github.com/ptyork/f_table/issues"



[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]
docs = [
    "mkdocs-material>=9.6.7,<10",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
]

[tool.uv]
default-groups = ["dev", "docs"]


[tool.hatch.build.targets.sdist]
include = [
    "src/f_table",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/f_table",
]

[tool.hatch.build.targets.wheel.sources]
"src/f_table" = "f_table"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

